Client/Styles/main.css
/*breakpoints*/
/*FONTS*/
/*COLORS*/
/*breakpoints*/
/*FONTS*/
/*COLORS*/
/******HTML ELEMENTS*****/
body {
  margin: 0;
  font-family: "Poppins", sans-serif;
  font-size: 100%; }

/***********************/
/******Component Ternary Classes*********/
.nav-scroll {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  transition: background-color .2s ease-in;
  background-color: white;
  color: #849fff;
  position: fixed;
  top: 0;
  width: 100vw;
  height: 10vh;
  z-index: 4; }
  .nav-scroll h2 {
    margin-left: 5%; }
  .nav-scroll button {
    margin-right: 5%;
    background-color: transparent;
    border-style: none;
    font-family: "Poppins", sans-serif;
    font-size: 100%;
    color: #849fff; }

.low-shadow {
  box-shadow: 0 2px 1px -1px lightgray; }

/****************************************/
/******HOME PAGE*****/
.home-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; }
  .home-wrapper .nav-bar {
    transition: background-color .2s ease-in;
    position: fixed;
    top: 0;
    width: 100vw;
    height: 10vh;
    background-color: transparent;
    color: white; }
    .home-wrapper .nav-bar h2 {
      margin-left: 5%; }
    .home-wrapper .nav-bar button {
      margin-right: 5%;
      background-color: transparent;
      border-style: none;
      font-family: "Poppins", sans-serif;
      font-size: 100%;
      color: white; }
  .home-wrapper .home {
    height: 100vh;
    width: 100vw;
    background-image: url("http://gdurl.com/t3Ah");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50%;
    color: white; }
    .home-wrapper .home p {
      z-index: 2;
      margin-bottom: 10%; }
    .home-wrapper .home div {
      height: 100vh;
      width: 100vw;
      position: absolute;
      background-color: rgba(0, 0, 0, 0.6);
      z-index: 1; }
    .home-wrapper .home .area {
      font-family: "Poppins", sans-serif;
      font-size: 100%;
      background-color: #849fff;
      color: white;
      border-radius: 6px;
      height: 6vh;
      width: auto;
      border-style: none;
      padding: 1.5%;
      line-height: 1.5%; }
    .home-wrapper .home button {
      z-index: 2;
      position: relative; }
  .home-wrapper .how-it-works {
    background-color: #f4f7f9;
    height: 100vh;
    width: 100%; }
  @media (min-width: 300px) {
    .home-wrapper .nav-bar {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      z-index: 2; }
    .home-wrapper .home {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center; }
      .home-wrapper .home p {
        font-size: 200%;
        text-align: center; }
      .home-wrapper .home .down {
        background-color: transparent;
        border-style: none;
        position: absolute;
        bottom: 2vh;
        z-index: 2; }
        .home-wrapper .home .down .move-downwards {
          font-size: 50px;
          color: white; }
    .home-wrapper .how-it-works {
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      align-items: center;
      text-align: center; }
      .home-wrapper .how-it-works .app-usage {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        font-weight: lighter;
        font-size: 90%; }
        .home-wrapper .how-it-works .app-usage .city-filter {
          font-family: "Poppins", sans-serif;
          font-size: 100%;
          font-size: 120%;
          text-indent: 15px;
          border-style: none;
          color: #849fff; }
      .home-wrapper .how-it-works .gmap-container {
        border-radius: 8px;
        height: 60%;
        width: 80%; } }
  @media (min-width: 768px) {
    .home-wrapper .home p {
      font-size: 300%; }
    .home-wrapper .how-it-works .app-usage {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      font-size: 100%; } }

/*************************/
/*******ANIMATIONS********/
@keyframes fade-in {
  0% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@keyframes fade-out {
  0% {
    opacity: 1; }
  100% {
    opacity: 0; } }
.fade-in {
  animation: fade-in .4s 1; }

.fade-out {
  animation: fade-out .3s 1; }

/*************************/
/*******GOOGLE-MAPS********/
.map-marker {
  width: 30px;
  height: 30px; }

/*************************/

/*# sourceMappingURL=main.css.map */

